--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body bgcolor="lightblue">
+<body bgcolor="lightred">
 <h1> WELCOME OLIVEA </h1>
 <img src="xyz.jpg" width="550" height="550">
 </body>
